@@ -1,17 +1,17 @@
 DIST libspiff-0.5.2.tar.bz2 194102 RMD160 794b71720c38d005d28a828ed8f1c78bd4d53fcf SHA1 005526456a4b6e7f49b1ebe56a493098d70c235f SHA256 fd27fa452fc36f9b3fa6610f4c9241b82325f830dba2fbe2ac6ec2bd21d5294d
-DIST libspiff-0.6.0rc1.tar.bz2 167605 RMD160 6660734aad5673b42db86b5fcf26542d34275bff SHA1 ecb68bb76ae7b09e4851506b66c459c6aa8d24eb SHA256 f13665f5ba6f04c86af65882f04a42acfba37d5746b1cec9645a93be9cf54827
+DIST libspiff-0.6.3.tar.bz2 456661 RMD160 a5b5c99ea52d91135478db661db58509bbf2ba14 SHA1 bae9bf5e8f8e4b57de35f10c4719eec3c0692b9d SHA256 88ab5575cf426f5b1e798548fe487221a267aad8265498c39d89eec1e311f7dc
 EBUILD libspiff-0.5.2.ebuild 856 RMD160 685db5c4cf6f2a1ab643e5d5ece3406b59a30750 SHA1 8afc794766d65320d17393d86479aa1b10a0ae33 SHA256 8685eafddc6b7fe293412e109cc16ca8cab2d5cf4bed13d7a2c5848dd95d4afb
 MD5 c76149ad952a85e60ceed04d03f2d39a libspiff-0.5.2.ebuild 856
 RMD160 685db5c4cf6f2a1ab643e5d5ece3406b59a30750 libspiff-0.5.2.ebuild 856
 SHA256 8685eafddc6b7fe293412e109cc16ca8cab2d5cf4bed13d7a2c5848dd95d4afb libspiff-0.5.2.ebuild 856
-EBUILD libspiff-0.6.0_rc1.ebuild 911 RMD160 6667a2fa9aa32fd74ec58d4bb93808380b5e63c3 SHA1 75c8720fa6b7072ba29985e6924677578f8b807e SHA256 5a5df0ce6d79f30012c18a74e5033b6f0e939998aa006e47780d19a5a7cfa758
-MD5 03ea5707064ef73ca25d5dc9b4799c3b libspiff-0.6.0_rc1.ebuild 911
-RMD160 6667a2fa9aa32fd74ec58d4bb93808380b5e63c3 libspiff-0.6.0_rc1.ebuild 911
-SHA256 5a5df0ce6d79f30012c18a74e5033b6f0e939998aa006e47780d19a5a7cfa758 libspiff-0.6.0_rc1.ebuild 911
-MISC ChangeLog 636 RMD160 e1e9dc560554a2b1626c26dbf6cbd1ef858e6b83 SHA1 17e37a4374c56e4e962ce262a67e29407771dedb SHA256 d7b021726b419a830ee544ced4511ca3506b5c3f0bceda82f1dedb26bf329c3c
-MD5 2fda38c196602a68ff19f36b9196a6cc ChangeLog 636
-RMD160 e1e9dc560554a2b1626c26dbf6cbd1ef858e6b83 ChangeLog 636
-SHA256 d7b021726b419a830ee544ced4511ca3506b5c3f0bceda82f1dedb26bf329c3c ChangeLog 636
+EBUILD libspiff-0.6.3.ebuild 891 RMD160 d5fd71609a6d3ac291ff6266feb0771ec6df5ace SHA1 e80aae9f430c54a15f5ea18c65d21b01adb12a01 SHA256 3dd63369e7609a78d6fa528b304f43d398a2ff124de17117cbfe21969f10dfe3
+MD5 14fa02c150f7311f92b31b441cd4d18d libspiff-0.6.3.ebuild 891
+RMD160 d5fd71609a6d3ac291ff6266feb0771ec6df5ace libspiff-0.6.3.ebuild 891
+SHA256 3dd63369e7609a78d6fa528b304f43d398a2ff124de17117cbfe21969f10dfe3 libspiff-0.6.3.ebuild 891
+MISC ChangeLog 784 RMD160 2d46c637e0d2e46efb3213ba631d807ab49f0341 SHA1 584dd138b940e5257cad200263eb93e6d972437f SHA256 8a5bcf892d067a760702c9cf3f90dccd217857364f090b72f6a1acbb4d18d951
+MD5 32bc940e1012f9be8c3703802c4dd139 ChangeLog 784
+RMD160 2d46c637e0d2e46efb3213ba631d807ab49f0341 ChangeLog 784
+SHA256 8a5bcf892d067a760702c9cf3f90dccd217857364f090b72f6a1acbb4d18d951 ChangeLog 784
 MISC metadata.xml 339 RMD160 07dae93aca43a44cce298b029e5652b682e017ff SHA1 dfd6e74c95bd519ce6c0f752f3f0e308bdfcd959 SHA256 580c5a401a0f735565b02b39de27402e3a116193bdd12349838d5799c1912d1a
 MD5 ee5094405256889f99160797587700e2 metadata.xml 339
 RMD160 07dae93aca43a44cce298b029e5652b682e017ff metadata.xml 339
@@ -19,6 +19,6 @@ SHA256 580c5a401a0f735565b02b39de27402e3a116193bdd12349838d5799c1912d1a metadata
 MD5 0f3cbe01be98e09bb21691d71a4623b8 files/digest-libspiff-0.5.2 247
 RMD160 7562c634d1b0ed4b939d0cf6807fef8ce7c0a9f0 files/digest-libspiff-0.5.2 247
 SHA256 122904657413daacb77232c663af09594d8901c80b8b5f444ca69ee64fe0fefd files/digest-libspiff-0.5.2 247
-MD5 5252585de39e802fb389374a0541f2e4 files/digest-libspiff-0.6.0_rc1 256
-RMD160 753935352beea494c7d79e00ba76eee9155e3425 files/digest-libspiff-0.6.0_rc1 256
-SHA256 1df069f6310f6307fa04e33a6b44db77120710ce6c6d80fa83280fb8c05aed5c files/digest-libspiff-0.6.0_rc1 256
+MD5 ae24dd73da1dbdc11db31189cbd6a255 files/digest-libspiff-0.6.3 247
+RMD160 f49d297157f404768570e8445add3a391f0794cb files/digest-libspiff-0.6.3 247
+SHA256 6fe3130775fff88e8557c6b22cc96432778119684cc3bffc09d0e77c0b14a275 files/digest-libspiff-0.6.3 247
