@@ -1,3 +1,0 @@
-MD5 de27cbe1cbc574a4fe622d647647c64e libspiff-0.6.0rc1.tar.bz2 167605
-RMD160 6660734aad5673b42db86b5fcf26542d34275bff libspiff-0.6.0rc1.tar.bz2 167605
-SHA256 f13665f5ba6f04c86af65882f04a42acfba37d5746b1cec9645a93be9cf54827 libspiff-0.6.0rc1.tar.bz2 167605
