@@ -1,0 +1,3 @@
+MD5 682a628137caa33e8083946e21fa9f94 libspiff-0.6.3.tar.bz2 456661
+RMD160 a5b5c99ea52d91135478db661db58509bbf2ba14 libspiff-0.6.3.tar.bz2 456661
+SHA256 88ab5575cf426f5b1e798548fe487221a267aad8265498c39d89eec1e311f7dc libspiff-0.6.3.tar.bz2 456661
