@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libspiff
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libspiff/ChangeLog,v 1.3 2007/03/13 04:11:55 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libspiff/ChangeLog,v 1.4 2007/04/13 01:25:14 beandog Exp $
+
+*libspiff-0.6.3 (13 Apr 2007)
+
+  13 Apr 2007; Steve Dibb <beandog@gentoo.org> -libspiff-0.6.0_rc1.ebuild,
+  +libspiff-0.6.3.ebuild:
+  Version bump
 
   13 Mar 2007; Steve Dibb <beandog@gentoo.org> libspiff-0.6.0_rc1.ebuild:
   Change license from xiph to BSD, bug 170323
